[package]
name = "zkevm-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc", "serde"] }
clap = { version = "4.0", features = ["derive"] }
ethers-core = "2.0"
ethers-providers = "2.0"
polkavm = "0.9.3"
polkavm-linker = "0.9.2"
risc0-zkvm = "0.21.0"
serde = "1.0"
serde_json = "1.0.114"
tokio = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zkevm-core = { path = "core", features = ["ethers"] }
zkevm-methods = { path = "methods" }

[features]
cuda = ["risc0-zkvm/cuda"]
default = ["prove"]
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
